objects/copado__User_Story_Metadata__c.object
<CustomObject>
    <fields>
        <fullName>Metadata_Type_Help__c</fullName>
        <formula>SUBSTITUTE(Name, LEFT(Name, FIND(&quot; &quot;, Name)), &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Metadata Type Help</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Metadata_Type__c</fullName>
        <formula>Trim(Left(Metadata_Type_Help__c , FIND(&quot;.&quot;, Metadata_Type_Help__c )-1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Metadata Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Last_Commit_Date__c</fullName>
        <inlineHelpText>The date when this component was last committed in the User Story.</inlineHelpText>
        <label>Last Commit Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>copado__Metadata_API_Name__c</fullName>
        <label>Metadata API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Status_Icon__c</fullName>
        <formula>IMAGE(
CASE(TEXT(copado__Status__c),

&apos;Potential Conflict&apos;, &apos;/resource/&apos; &amp; IF($Setup.copado__Settings__c.copado__Namespace__c!=&apos;none&apos;,&apos;copado__&apos;, &apos;&apos;) &amp; &apos;Statics/img/icons/warning16.png&apos;,

&apos;Back Promoted&apos;, &apos;/resource/&apos; &amp; IF($Setup.copado__Settings__c.copado__Namespace__c!=&apos;none&apos;,&apos;copado__&apos;, &apos;&apos;) &amp; &apos;Statics/img/icons/warning16.png&apos;,

&apos;Conflict Resolved&apos;, &apos;/resource/&apos; &amp; IF($Setup.copado__Settings__c.copado__Namespace__c!=&apos;none&apos;,&apos;copado__&apos;, &apos;&apos;) &amp; &apos;Statics/img/icons/confirm16.png&apos;,

&apos;Under Review&apos;, &apos;/resource/&apos; &amp; IF($Setup.copado__Settings__c.copado__Namespace__c!=&apos;none&apos;,&apos;copado__&apos;, &apos;&apos;) &amp; &apos;Statics/img/icons/loading.gif&apos;,

&apos;On Hold&apos;, &apos;/resource/&apos; &amp; IF($Setup.copado__Settings__c.copado__Namespace__c!=&apos;none&apos;,&apos;copado__&apos;, &apos;&apos;) &amp; &apos;Statics/img/icons/warning16.png&apos;,

&apos;/s.gif&apos;),

TEXT(copado__Status__c)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status Icon</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Potential Conflict</fullName>
                </value>
                <value>
                    <fullName>Under Review</fullName>
                </value>
                <value>
                    <fullName>Conflict Resolved</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Back Promoted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__Unique_ID__c</fullName>
        <externalId>true</externalId>
        <label>Unique ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>copado__User_Story__c</fullName>
        <label>User Story</label>
        <referenceTo>copado__User_Story__c</referenceTo>
        <relationshipLabel>User Story Metadata</relationshipLabel>
        <relationshipName>User_Story_Metadata</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>User Story Metadata</label>
    <nameField>
        <label>User Story Metadata Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>User Story Metadata</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>